--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<img src="./Printfulify logo.jpg" alt="">
+    <img src="./Printfulify logo.jpg" alt="">
+    <p>Izdrukā rītdienu šodien.</p>
 </body>
 </html>
