--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <img src="./Printfulify logo.jpg" alt="">
-    <p>Izdrukā rītdienu šodien.</p>
+    <p>Izdrukā rītdienu šodien.gi</p>
 </body>
 </html>
